# CB9Lib

./: .gitignore  API_REFERENCE.html  API_REFERENCE.md  CHANGELOG_v1.3.md  LICENSE  MANIFEST.in  PREFERENCES_QUICK_START.md  QUICKSTART.md  README.md  demo_all_features.py  demo_config.json  example.py  example_config.json  example_v13.py  pyproject.toml  setup.py  test_json_metadata.py  test_logRotate.py  test_new_header.py
.claude/: EDITING_PREFERENCES.md  HOW_TO_USE.md  README.md  preferences.md
CB9Lib/: __init__.py  colors.py  func.py  globals.py  imgvid.py
