[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CB9Lib"
version = "1.1.0"
authors = [
    {name = "Cloud Box 9 Inc.", email = "info@cloudbox9.com"},
]
description = "Shared utility library for Cloud Box 9 projects with terminal colors, UI components, and file utilities."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
keywords = ["terminal", "colors", "ansi", "cli", "ui", "utilities", "json", "logging"]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/cloudbox9/CB9Lib"
Documentation = "https://github.com/cloudbox9/CB9Lib#readme"
Repository = "https://github.com/cloudbox9/CB9Lib"
"Bug Tracker" = "https://github.com/cloudbox9/CB9Lib/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["CB9Lib"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
